--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,13 @@
 %html
   %head
     %title #{title} 
-    = stylesheet_link_tag :all
-    = javascript_include_tag :defaults
+    = stylesheet_link_tag "main"
+    
+    /[if lt IE 9]
+      = javascript_include_tag "vendor/html5"
+    
     = csrf_meta_tag
   %body
     = yield
+    %section
+      This is a section
