--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,5 @@
-- @title = "home"
-%h1 Pages#home
-%p Find me in app/views/pages/home.html.erb
-%h2= @foo
+- @title = "Home"
+
+%p This is the home page for the <a href="http://railstutorial.org/" target="rails_tutorial">Ruby on Rails Tutorial</a> sample app.
+%p.centered
+  = link_to "Sign up now!", '#', :class=>"button_call_to_action round"
