--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer
   %nav
     %ul
-      %li #{link_to "About", "#"}
-      %li #{link_to "Contact", "#"}
+      %li #{link_to "About", about_path}
+      %li #{link_to "Contact", contact_path}
       %li #{link_to "News", "http://news.railstutorial.org"}
       %li #{link_to "Tutorial", "http://www.railstutorial.org"}
