--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
 %header
-  = link_to '#', :class=>"logo round" do
+  = link_to root_path, :class=>"logo round" do
     = image_tag "logo.png", :alt=>"Rails Sample App"
   %nav.round
     %ul
-      %li #{link_to "Home", "#"}
-      %li #{link_to "Help", "#"}
+      %li #{link_to "Home", root_path}
+      %li #{link_to "Help", help_path}
       %li #{link_to "Sign In", "#"}
