--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,4 +2,4 @@
 
 %p This is the home page for the <a href="http://railstutorial.org/" target="rails_tutorial">Ruby on Rails Tutorial</a> sample app.
 %p.centered
-  = link_to "Sign up now!", '#', :class=>"button_call_to_action round"
+  = link_to "Sign up now!", signup_path, :class=>"button_call_to_action round"
