--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -19,6 +19,10 @@ BODY
   :color #333
   :background $COLOR_MAIN
 
+PRE, CODE
+  :font-family 'Courier New', monospace
+  :font-size 1em
+
 A
   :color $COLOR_ACCENT
   &:HOVER
