Added gravatar to user page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -89,3 +89,8 @@ FOOTER {
   .button_call_to_action:HOVER {
     background: #bfe88c;
     color: #0e626e; }
+
+.gravatar {
+  float: right;
+  position: relative;
+  top: -5em; }
