--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -92,3 +92,8 @@ FOOTER
   &:HOVER
     :background $COLOR_ACCENT_LIGHT
     :color $COLOR_ACCENT
+
+.gravatar
+  :float right
+  :position relative
+  :top -5em
