--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,3 @@
-- @title = "Show User"
+- @title = @user.name
 
-#{@user.name}, #{@user.email}
+= image_tag gravatar_url(@user), :class=>:gravatar, :alt=>"#{@user.name} Gravatar"
