--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -36,6 +36,9 @@ IMG
   :margin 0 auto
   :padding 1em
 
+TH
+  :text-align left
+
 NAV
   :background $COLOR_ACCENT_LIGHT
   HEADER &
@@ -92,6 +95,10 @@ FOOTER
   &:HOVER
     :background $COLOR_ACCENT_LIGHT
     :color $COLOR_ACCENT
+
+.profile
+  :border 1px solid !COLOR_ACCENT_LIGHT
+  :background lighten(!COLOR_ACCENT_LIGHT, 20%)
 
 .gravatar
   :float right
