--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,12 @@
 - @title = @user.name
 
 = image_tag gravatar_url(@user), :class=>:gravatar, :alt=>"#{@user.name} Gravatar"
+
+%section.profile
+  %table
+    %tr
+      %th Name
+      %td #{@user.name}
+    %tr
+      %th URL
+      %td #{link_to user_url(@user), @user}
