--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -3,6 +3,7 @@ $COLOR_MAIN_LIGHT: #784F2B
 $COLOR_ACCENT: #0E626E
 $COLOR_ACCENT_LIGHT: #BFE88C
 $COLOR_SECONDARY: #332136
+$COLOR_RED: #F00
 
 =round($radius:.4em)
   :-moz-border-radius $radius
@@ -19,6 +20,9 @@ BODY
   :color #333
   :background $COLOR_MAIN
 
+H2
+  :font-size 1.2em
+
 PRE, CODE
   :font-family 'Courier New', monospace
   :font-size 1em
@@ -30,6 +34,10 @@ A
 
 IMG
   :border none
+
+UL, OL
+  :padding-left 1em
+  :margin-left 1em
 
 .container
   :width 510px
@@ -77,6 +85,27 @@ FOOTER
   A
     :font-size .8em
 
+.form
+  DT
+    :margin .5em 0 0
+    :font-weight bold
+  DD
+    :margin .5em 0 .5em 0
+  .actions
+    :margin 1em 0
+  .field_with_errors
+    :color $COLOR_RED
+    INPUT
+      :border-color $COLOR_RED
+
+.form_errors
+  :padding 1em
+  :border 1px solid !COLOR_RED
+  +round
+  :background lighten(!COLOR_RED, 40%)
+  H2
+    :margin 0
+
 .round
   +round
 
@@ -97,8 +126,8 @@ FOOTER
     :color $COLOR_ACCENT
 
 .profile
-  :border 1px solid !COLOR_ACCENT_LIGHT
-  :background lighten(!COLOR_ACCENT_LIGHT, 20%)
+  :border 1px solid $COLOR_ACCENT_LIGHT
+  :background lighten($COLOR_ACCENT_LIGHT, 20%)
 
 .gravatar
   :float right
