--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,5 +1,6 @@
 - @title = "Home"
 
 %p This is the home page for the <a href="http://railstutorial.org/" target="rails_tutorial">Ruby on Rails Tutorial</a> sample app.
-%p.centered
-  = link_to "Sign up now!", signup_path, :class=>"button_call_to_action round"
+- unless signed_in?
+  %p.centered
+    = link_to "Sign up now!", signup_path, :class=>"button_call_to_action round"
