Added user/index page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 - @title = @user.name
 
-= image_tag gravatar_url(@user), :class=>:gravatar, :alt=>"#{@user.name} Gravatar"
+= image_tag gravatar_url(@user), :class=>:profile_gravatar, :alt=>"#{@user.name} Gravatar"
 
 %section.profile
   %table
