--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -41,7 +41,7 @@ UL, OL
   :margin-left 1em
 
 .container
-  :width 510px
+  :width 600px
   :margin 0 auto
   :padding 1em
 
@@ -150,6 +150,16 @@ FOOTER
   :background lighten($COLOR_SECONDARY, 60%)
 
 .gravatar
+  :margin-right .5em
+
+.profile_gravatar
   :float right
   :position relative
   :top -5em
+
+.users
+  :margin 0
+  :padding 0
+  LI
+    :list-style none
+    :margin .4em 0
