--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,7 +1,11 @@
 - @title = "All Users"
 
+= will_paginate
+
 %ul.users
   - @users.each do |user|
     %li
       = image_tag gravatar_url(user, :size=>20), :alt=>"#{user.name} Gravatar", :class=>:gravatar
       = link_to user.name, user
+
+= will_paginate
