--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -145,6 +145,19 @@ FOOTER
     :border 1px solid $COLOR_RED
     :background lighten($COLOR_RED, 40%)
 
+.pagination
+  :border
+    :width 1px 0
+    :style solid
+    :color lighten($COLOR_MAIN, 60%)
+  :margin 1em 0
+  :padding .4em 0
+  A
+    :text-decoration none
+  EM
+    :font-style normal
+    :font-weight bold
+  
 .profile
   :border 1px solid $COLOR_SECONDARY
   :background lighten($COLOR_SECONDARY, 60%)
