--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -3,9 +3,6 @@
 = will_paginate
 
 %ul.users
-  - @users.each do |user|
-    %li
-      = image_tag gravatar_url(user, :size=>20), :alt=>"#{user.name} Gravatar", :class=>:gravatar
-      = link_to user.name, user
+  = render @users
 
 = will_paginate
