--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title #{title}
     = render "layouts/stylesheets"
     
+    = javascript_include_tag "jquery"
+    = javascript_include_tag "rails"
     /[if lt IE 9]
       = javascript_include_tag "vendor/html5"
     
