--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -79,6 +79,19 @@ FOOTER {
   FOOTER A {
     font-size: 0.8em; }
 
+A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit] {
+  padding: 0.1em 0.8em;
+  background: #0e626e;
+  border: none;
+  -moz-border-radius: 0.4em;
+  -webkit-border-radius: 0.4em;
+  border-radius: 0.4em;
+  color: white;
+  text-decoration: none; }
+  A.button:HOVER, BUTTON:HOVER, INPUT[type=button]:HOVER, INPUT[type=reset]:HOVER, INPUT[type=submit]:HOVER {
+    background: #bfe88c;
+    color: #0e626e; }
+
 .form DT {
   margin: 0.5em 0 0;
   font-weight: bold; }
