--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -23,6 +23,9 @@ BODY
 
 H2
   :font-size 1.2em
+H3
+  :font-size 1.1em
+  :margin 0
 
 PRE, CODE
   :font-family 'Courier New', monospace
@@ -96,8 +99,12 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit]
   &:HOVER
     :background $COLOR_ACCENT_LIGHT
     :color $COLOR_ACCENT
-  
+
+.clearfix
+  :display inline-block
+
 .form
+  :margin 0
   DT
     :margin .5em 0 0
     :font-weight bold
@@ -169,10 +176,19 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit]
     :font-style normal
     :font-weight bold
   
-.profile
+.profile, .user_info, .micropost_form
   :border 1px solid $COLOR_SECONDARY
   :background lighten($COLOR_SECONDARY, 60%)
+
+.user_info
+  :float right
+  :width 200px
   
+.micropost_form
+  :float left
+  :width 338px
+  :margin-right 10px
+
 .microposts
   :border 1px solid $COLOR_MAIN_LIGHT
   :background lighten($COLOR_MAIN_LIGHT, 60%)
@@ -190,6 +206,10 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit]
         :width 1px 0
         :style solid
         :color lighten($COLOR_MAIN_LIGHT, 30%)
+
+#micropost_content
+  :width 100%
+  :height 4em
 
 .gravatar
   :margin-right .5em
