--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,6 +1,12 @@
 - @title = "Home"
 
-%p This is the home page for the <a href="http://railstutorial.org/" target="rails_tutorial">Ruby on Rails Tutorial</a> sample app.
-- unless signed_in?
+- if !signed_in?
+  %p This is the home page for the <a href="http://railstutorial.org/" target="rails_tutorial">Ruby on Rails Tutorial</a> sample app.
   %p.centered
     = link_to "Sign up now!", signup_path, :class=>"button_call_to_action round"
+- else
+  .clearfix
+    %section.user_info
+      = render 'shared/user_info', :user=>current_user
+    %section.micropost_form
+      = render 'shared/micropost_form'
