--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -231,8 +231,14 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit] {
   width: 100%;
   height: 4em; }
 
+.user_info .gravitars {
+  margin: 1em 0 0; }
+
 .gravatar {
   margin-right: 0.5em; }
+
+.user_info_gravatar {
+  margin: 0.2em; }
 
 .profile_gravatar {
   float: right;
