Implemented setting Micropost@recipient with #extented_content

--- a/app/views/shared/_feed_item.html.haml
+++ b/app/views/shared/_feed_item.html.haml
@@ -4,7 +4,12 @@
       = image_tag gravatar_url(feed_item.user, :size=>40), :alt=>"#{feed_item.user.name} Gravatar", :class=>:gravatar
   .text
     .user= link_to feed_item.user.name, feed_item.user
-    .content= feed_item.content
+    .content
+      - if !feed_item.recipient
+        = feed_item.content
+      - else
+        = link_to "@#{feed_item.recipient.name}", feed_item.recipient
+        = feed_item.content
     .timestamp Created #{time_ago_in_words(feed_item.created_at)} ago
   .actions
     - if feed_item.user == current_user
