--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -228,7 +228,7 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit]
     :font-size .85em
     :color #666
 
-#micropost_content
+#micropost_extended_content
   :width 100%
   :height 4em
 
