--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -227,7 +227,7 @@ A.button, BUTTON, INPUT[type=button], INPUT[type=reset], INPUT[type=submit] {
   font-size: 0.85em;
   color: #666666; }
 
-#micropost_content {
+#micropost_extended_content {
   width: 100%;
   height: 4em; }
 
